[gd_scene load_steps=2 format=3 uid="uid://70m05x6kew21"]

[ext_resource type="Script" path="res://systems/map/cross.gd" id="1_2gcqb"]

[node name="Cross" type="Node2D"]
script = ExtResource("1_2gcqb")

[node name="Background1" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 11.0
rotation = 1.5708
pivot_offset = Vector2(20, 11)
color = Color(0.282353, 0.533333, 0.568627, 1)

[node name="Background2" type="ColorRect" parent="."]
offset_left = -20.0
offset_top = -11.0
offset_right = 20.0
offset_bottom = 11.0
pivot_offset = Vector2(20, 11)
color = Color(0.282353, 0.533333, 0.568627, 1)

[connection signal="gui_input" from="Background1" to="." method="_on_background_1_gui_input"]
[connection signal="mouse_entered" from="Background1" to="." method="_on_background_mouse_entered"]
[connection signal="mouse_exited" from="Background1" to="." method="_on_background_mouse_exited"]
[connection signal="gui_input" from="Background2" to="." method="_on_background_gui_input"]
[connection signal="mouse_entered" from="Background2" to="." method="_on_background_mouse_entered"]
[connection signal="mouse_exited" from="Background2" to="." method="_on_background_mouse_exited"]
